--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
             <div class="section">
                 <h2>Biography</h2>
                 <p>
-                    Viet-Nghia Nguyen is currently pursuing a PhD’s degree in Aerospace Engineering at the <a href="https://sites.google.com/view/caesl/home" target="_blank" rel="noopener noreferrer"> Computational Aeroelasticity and Structure Laboratory, Jeonbuk National University, Korea.
+                    Viet-Nghia Nguyen is currently pursuing a PhD’s degree in Aerospace Engineering at the <a href="https://sites.google.com/view/caesl/home" target="_blank" rel="noopener noreferrer"> 
+                        Computational Aeroelasticity and Structure Laboratory, Jeonbuk National University, Korea.
                     In 2025, Nghia received his Master's degree in Aerospace Information Engineering from KonKuk University, Korea.
                 </p>
             </div>
