--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       }, 
         {
           type: "DC",
-          authors: "Toe, Myat; Htike, Thein Min; Nghia, Nguyen Viet; Nguyen, Tuan Anh; Lee, Jae-Woo",
+          authors: "Toe, Myat; Htike, Thein Min; <strong>Nghia, Nguyen Viet</strong>; Nguyen, Tuan Anh; Lee, Jae-Woo",
           title: "Vehicle Digital Twin System: Integration and Flight Simulation under Steady Wind Condition",
           journal: "Proceedings of the Korean Society for Aeronautical and Space Sciences (KSAS)",
           year: 2025,
