--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               
                  <div class="education-item">
                     <div class="education-degree">
-                       Research Assistant at <a https://sites.google.com/view/kadalab/home" target="_blank" rel="noopener noreferrer">
+                       Master Researcher at <a https://sites.google.com/view/kadalab/home" target="_blank" rel="noopener noreferrer">
             KADA Lab
         </a>
                     </div>
@@ -456,7 +456,7 @@
         },
         {
           type: "DC",
-          authors: "Pham, Vinh; <strong>Nguyen, Nghia</strong>; Lee, Jae-Woo",
+          authors: "Pham, Vinh; Nguyen, Nghia; Lee, Jae-Woo",
           title: "Enhancing Extrapolation Accuracy for Aerodynamic Modeling in eVTOL-UAM with LSTM-Based Variable Fidelity Modeling",
           journal: "Proceedings of the Korean Society for Aeronautical and Space Sciences (KSAS)",
           year: 2024,
@@ -471,7 +471,7 @@
         },
         {
           type: "DC",
-          authors: "<strong>Nguyen, Nghia</strong>; Pham, Vinh; Tyan, Maxim; Lee, Jae-Woo",
+          authors: "Nguyen, Nghia; Pham, Vinh; Tyan, Maxim; Lee, Jae-Woo",
           title: "Empowering Large-Scale Data Analysis with an Advanced Gaussian Process Modeling Framework",
           journal: "Proceedings of the Korean Society for Aeronautical and Space Sciences (KSAS)",
           year: 2023,
