--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                 <p>
                     Multidiscipline Design Optimization<br>
                     Artificial Intelligence/Machine Learning Application in Surrogate-based Modeling<br>
+                    eVTOL Aircraft Flight Dynamics Modeling & Simulation<br>
                 </p>
             </div>
     
