--- a/index.html
+++ b/index.html
@@ -362,6 +362,25 @@
     
 <script>
     const publications = [
+        {
+          type: "SCI",
+          authors: "Kim, Hyejin; <strong>Nguyen, Viet Nghia</strong>; Cho, Haeseong; Kim, Joong-Kwan; Oh, Chisung",
+          title: "Data-driven system identification using improved recurrent network for structure-borne noise in vehicle cabin",
+          journal: "Mechanical Systems and Signal Processing",
+          volume: "244",
+          pages: "113735",
+          year: 2026,
+          url: "https://www.sciencedirect.com/science/article/pii/S0888327025014360",
+          bibtex: `@article{kim2026data,
+            title={Data-driven system identification using improved recurrent network for structure-borne noise in vehicle cabin},
+            author={Kim, Hyejin and Nguyen, Viet Nghia and Cho, Haeseong and Kim, Joong-Kwan and Oh, Chisung},
+            journal={Mechanical Systems and Signal Processing},
+            volume={244},
+            pages={113735},
+            year={2026},
+            publisher={Elsevier}
+          }`
+        },
       {
         type: "SCI",
         authors: "Alam, Mohammad Irfan; Thu, Zin Win; Nguyen, Nghia; Tyan, Maxim; Lee, Jae-Woo",
@@ -380,6 +399,95 @@
           publisher={IEEE}
         }`
       }, 
+        
+        {
+          type: "IC",
+          authors: "<strong>Nguyen, Viet Nghia</strong>; Kim, Hyejin; Kim, Joong-Kwan; Cho, Haeseong",
+          title: "Data-driven Surrogate Modelling using Attention-based Deep Operator Network for Active Noise Control",
+          journal: "Proceedings of the 9th Asian Pacific Congress on Computational Mechanics / 7th Australasian Conference on Computational Mechanics (APCOM-ACCM)",
+          year: 2025,
+          location: "Brisbane, Queensland, Australia",
+          date: "December 07–10",
+          url: "#",
+          bibtex: `@inproceedings{nguyen2025surrogate,
+            title={Data-driven Surrogate Modelling using Attention-based Deep Operator Network for Active Noise Control},
+            author={Nguyen, Viet Nghia and Kim, Hyejin and Kim, Joong-Kwan and Cho, Haeseong},
+            booktitle={Proceedings of the 9th Asian Pacific Congress on Computational Mechanics / 7th Australasian Conference on Computational Mechanics (APCOM-ACCM)},
+            year={2025},
+            address={Brisbane, Queensland, Australia}
+          }`
+        },
+        {
+          type: "IC",
+          authors: "Chen, S.; Kim, Hyejin; <strong>Nguyen, Viet Nghia</strong>; Cho, Haeseong",
+          title: "A Study on Parametric Latent Dynamics Identification for Aerodynamic Flow Modeling",
+          journal: "Proceedings of CIVIL-COMP 2025",
+          year: 2025,
+          location: "Cagliari, Sardinia, Italy",
+          date: "August 27–29",
+          url: "#",
+          bibtex: `@inproceedings{chen2025parametric,
+            title={A Study on Parametric Latent Dynamics Identification for Aerodynamic Flow Modeling},
+            author={Chen, S. and Kim, Hyejin and Nguyen, Viet Nghia and Cho, Haeseong},
+            booktitle={Proceedings of CIVIL-COMP 2025},
+            year={2025},
+            address={Cagliari, Sardinia, Italy}
+          }`
+        },
+
+        {
+          type: "DC",
+          authors: "<strong>Nguyen, Viet Nghia</strong>; Kim, Hyejin; Cho, Haeseong; Kim, Joong-Kwan",
+          title: "DeepONet-based Noise Prediction Approach for Active Noise Control in Vehicle Cabins",
+          journal: "Proceedings of the 2025 Fall Conference of the Korean Society for Noise and Vibration Engineering (KSNVE)",
+          year: 2025,
+          location: "Gyeongju, Korea",
+          date: "November 26–29",
+          url: "#",
+          bibtex: `@inproceedings{nguyen2025deeponet_noise,
+            title={DeepONet-based Noise Prediction Approach for Active Noise Control in Vehicle Cabins},
+            author={Nguyen, Nghia and Kim, Hyejin and Cho, Haeseong and Kim, Joong-Kwan},
+            booktitle={2025년 한국소음진동공학회 추계 소음진동 학술대회},
+            year={2025},
+            address={Gyeongju, Korea},
+            organization={Korean Society for Noise and Vibration Engineering}
+          }`
+        },
+        {
+          type: "DC",
+          authors: "Park, Sangmin; Kim, Hyejin; <strong>Nguyen, Viet Nghia</strong>; Cho, Haeseong; Kim, Joong-Kwan",
+          title: "Development of a Deep Learning-based Narrowband Noise Prediction Method for Active Noise Control in Propeller Aircraft Cabins",
+          journal: "Proceedings of the 2025 Fall Joint Conference and General Assembly of the Acoustical Society of Korea (ASK)",
+          year: 2025,
+          location: "Korea",
+          date: "November 19–21",
+          url: "#",
+          bibtex: `@inproceedings{nguyen2025propeller_anc,
+            title={프로펠러 항공기 실내 능동소음제어를 위한 딥러닝 기반 협대역 소음 예측 기법 개발},
+            author={Park, Sangmin and Kim, Hyejin and Nguyen, Viet Nghia and Cho, Haeseong and Kim, Joong-Kwan},
+            booktitle={2025년도 추계 공동학술대회 한국음향학회·한국음악지각인지학회 및 한국음향학회 정기총회},
+            year={2025},
+            address={Korea}
+          }`
+        },
+        {
+          type: "DC",
+          authors: "<strong>Nguyen, Viet Nghia</strong>; Kim, Hyejin; Cho, Haeseong",
+          title: "A Comparative Study of Reduced-Order Modeling for Nonlinear Structures via Deep Temporal Architecture",
+          journal: "Proceedings of the 2025 Fall Conference of the Korean Society for Aeronautical and Space Sciences (KSAS)",
+          year: 2025,
+          location: "Goseong, Gangwon-do, Korea",
+          date: "November 11–14",
+          url: "#",
+          bibtex: `@inproceedings{nguyen2025rom_deep_temporal,
+            title={A Comparative Study of Reduced-Order Modeling for Nonlinear Structures via Deep Temporal Architecture},
+            author={Nguyen, Nghia and Kim, Hyejin and Cho, Haeseong},
+            booktitle={2025년도 한국항공우주학회 추계 학술대회},
+            year={2025},
+            address={Goseong, Gangwon-do, Korea},
+            organization={Korean Society for Aeronautical and Space Sciences}
+          }`
+        },
         {
           type: "DC",
           authors: "Toe, Myat; Htike, Thein Min; <strong>Nghia, Nguyen Viet</strong>; Nguyen, Tuan Anh; Lee, Jae-Woo",
